# ai-output-guard

./: .gitignore  CHANGELOG.md  Dockerfile  LAUNCH_CONTENT.md  LICENSE  MANIFEST.in  PUBLISH_GUIDE.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
dashboard/backend/: main.py
dashboard/frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
dashboard/frontend/src/: App.vue  main.ts
dashboard/frontend/src/api/: client.ts  types.ts
dashboard/frontend/src/assets/: main.css
dashboard/frontend/src/views/: AuditLog.vue  Dashboard.vue  Policies.vue  Settings.vue
docs/: 01-PRODUCT-DEFINITION.md  02-ARCHITECTURE.md  03-API-REFERENCE.md  04-POLICY-TEMPLATES.md  05-PROTOCOL-FLOWS.md  06-EVALUATION.md
examples/: killer-demo.py
examples/policy-examples/: development-lenient.yaml  enterprise-compliance.yaml  production-db-safe.yaml
lsp/: package-lock.json  package.json  tsconfig.json  tsconfig.test.json
lsp/out-test/src/: guardClient.js  guardClient.js.map
lsp/out-test/test/: extension.test.js  extension.test.js.map  guardClient.test.js  guardClient.test.js.map
lsp/src/: commands.ts  diagnostics.ts  extension.ts  guardClient.js.map  guardClient.ts
lsp/test/: extension.test.ts  guardClient.test.ts
scripts/: release.sh
src/agentguard/: __init__.py  config.py  errors.py  guard.py  policy_guard.py  result.py  schema_guard.py  semantic_guard.py
src/agentguard/api/: __init__.py  billing_routes.py  models.py  routes.py  server.py
src/agentguard/audit/: __init__.py  logger.py
src/agentguard/billing/: __init__.py  client.py  models.py  webhooks.py
src/agentguard/cli/: __init__.py  main.py
src/agentguard/fix/: __init__.py  enum_fixer.py  schema_fixer.py  type_fixer.py
src/agentguard/mcp/: __init__.py  resources.py  server.py  tools.py
src/agentguard/policy/: __init__.py  actions.py  engine.py  operators.py  parser.py  validator.py
src/agentguard/proxy/: __init__.py  __main__.py  interceptor.py  router.py  server.py  transformer.py
src/agentguard/semantic/: __init__.py  intent_registry.py  rule_matcher.py
tests/: conftest.py  test_api.py  test_billing.py  test_config.py  test_enum_fixer.py  test_errors.py  test_guard.py  test_mcp.py  test_policy_guard.py  test_proxy_integration.py  test_proxy_router.py  test_proxy_transformer.py  test_result.py  test_schema_fixer.py  test_schema_guard.py  test_semantic_guard.py  test_type_fixer.py  test_validator.py
