[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-output-guard"
version = "0.1.0"
description = "AI Output Safety Middleware — the seatbelt between LLMs and your systems"
readme = "README.md"
license = "MIT"
authors = [{ name = "AI Output Guard Team" }]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["ai-safety", "llm", "guardrails", "output-validation", "agent"]

dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "typer>=0.9,<1.0",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.100",
    "uvicorn[standard]>=0.23",
]
proxy = [
    "agentguard[api]",
    "httpx>=0.25",
]
semantic = [
    "sentence-transformers>=2.2",
]
all = [
    "agentguard[semantic]",
    "agentguard[proxy]",
    "aiohttp>=3.9",
]

[project.scripts]
agentguard = "agentguard.cli.main:app"
agentguard-mcp = "agentguard.mcp.server:main"
agentguard-api = "agentguard.api.server:main"
agentguard-proxy = "agentguard.proxy.server:main"

[project.urls]
Homepage = "https://github.com/Churman1113/ai-output-guard"
Documentation = "https://github.com/Churman1113/ai-output-guard#readme"
Repository = "https://github.com/Churman1113/ai-output-guard"
Issues = "https://github.com/Churman1113/ai-output-guard/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
agentguard = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
